# beagle

./: .cursorrules  .env.dev  .env.example  .gitignore  .tarpaulin.toml  .tmp_sqlx_prepare.sh  AGGRESSIVE_ROADMAP_2025-2026.md  BEAGLE_BEYOND_SOTA_ANALYSIS.md  BEAGLE_COSMO_ANALYSIS.md  BEAGLE_FRACTAL_ANALYSIS.md  BEAGLE_MODULES_GUIDE.md  BEAGLE_ONTIC_ANALYSIS.md  BEAGLE_PARADOX_ANALYSIS.md  BEAGLE_PARADOX_TESTS_COMPLETE.md  BEAGLE_PROJECT_MAP_v2_COMPLETE.md  BEYOND_SOTA_DISCUSSION_FRAMEWORK.md  CLAUDE.md  COMMIT_MESSAGE.txt  CONFIG_OVERVIEW_BEAGLE.md  CONTRIBUTING_BEAGLE.md  Cargo.toml  DOCUMENTATION_REWRITE_REVIEW_PACKAGE.md  DOCUMENTATION_REWRITE_ROADMAP.md  EXECUTION_LOG.md  HRV_INTEGRATION_MAP.md  HRV_INTEGRATION_SUMMARY_v2.0.md  INTEGRATION_COMPLETE.md  LLM_ROUTING_CORRECT.md  Makefile  PRODUCTION_READINESS_UPDATE.md  QUICKSTART.md  README.md  README_INTEGRATION_DOCS.md  REFACTORING_REPORT_2025_11_23.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.24.0.md  ROADMAP_FEATURE_COMPLETE.md  SAMPLE_REWRITE_BEAGLE_NOETIC_ANALYSIS_v2.md  TEST_MEMORY_INTEGRATION.sh  (+14 more)
apps/beagle-monorepo/: Cargo.toml  README.md
apps/beagle-monorepo/examples/: core_server_enhanced.rs  integrated_application.rs
apps/beagle-monorepo/src/: auth.rs  http.rs  http_memory.rs  jobs.rs  lib.rs  main.rs  pipeline.rs  pipeline_checkpoint.rs  pipeline_void.rs
apps/beagle-monorepo/tests/: observer_e2e.rs  pipeline_demo.rs  pipeline_mock.rs  pipeline_serendipity.rs  pipeline_void.rs
beagle-bin/: Cargo.toml  README.md  run.sh
beagle-bin/examples/: e2e_test.rs
beagle-bin/src/: main.rs
beagle-hypergraph/: Cargo.toml
beagle-hypergraph/src/: error.rs  lib.rs  models.rs  storage.rs  types.rs
beagle-hypergraph/src/search/: semantic.rs
beagle-hypergraph/src/storage/: postgres.rs
beagle-hypergraph/tests/common/: mod.rs
beagle-ide/src-tauri/: Cargo.toml  tauri.conf.json
beagle-ide/src-tauri/src/: commands.rs  lsp.rs  main.rs
crates/beagle-abyss/: Cargo.toml
crates/beagle-abyss/examples/: ethics_abyss.rs
crates/beagle-abyss/src/: abyss.rs  lib.rs  meta_ethics_synthesizer.rs  paradox_generator.rs
crates/beagle-abyss/tests/: integration_tests.rs
crates/beagle-agents/: Cargo.toml
crates/beagle-agents/src/: agent_trait.rs  causal.rs  coordinator.rs  darwin_cycle.rs  debate.rs  lib.rs  models.rs  quantum_mcts.rs  reasoning.rs  researcher.rs  specialized_agents.rs
crates/beagle-bilingual/: Cargo.toml  README.md
crates/beagle-bilingual/examples/: bilingual_example.rs
crates/beagle-bilingual/src/: lib.rs  twitter.rs
crates/beagle-bio/: Cargo.toml
crates/beagle-bio/src/: lib.rs
crates/beagle-bio/tests/: integration_tests.rs
crates/beagle-checkpoint/: Cargo.toml
crates/beagle-checkpoint/src/: checkpoint.rs  config.rs  error.rs  lib.rs  memory.rs  metadata.rs  postgres.rs
crates/beagle-config/: Cargo.toml
crates/beagle-config/src/: lib.rs  model.rs
crates/beagle-consciousness/: Cargo.toml
crates/beagle-consciousness/examples/: consciousness_gaze.rs
crates/beagle-consciousness/src/: emergence_tracker.rs  global_workspace.rs  lib.rs  mirror.rs  qualia_simulator.rs  self_theory_generator.rs
crates/beagle-core/: Cargo.toml
crates/beagle-core/src/: context.rs  context_extended.rs  implementations.rs  lib.rs  performance_optimizations.rs  stats.rs  traits.rs
crates/beagle-cosmo/: Cargo.toml
crates/beagle-cosmo/examples/: demo.rs
crates/beagle-cosmo/src/: lib.rs
crates/beagle-darwin/: Cargo.toml  README.md
crates/beagle-darwin-core/: Cargo.toml  INTEGRATION.md  README.md
crates/beagle-darwin-core/examples/: standalone_server.rs
crates/beagle-darwin-core/src/: lib.rs
crates/beagle-darwin/examples/: darwin_cycle.rs
crates/beagle-darwin/src/: lib.rs
crates/beagle-db/: Cargo.toml
crates/beagle-db/migrations/: 001_initial_schema.sql  002_performance_indexes.sql
crates/beagle-db/src/: lib.rs  migrator.rs
crates/beagle-eternity/: Cargo.toml
crates/beagle-eternity/examples/: eternity.rs
crates/beagle-eternity/src/: lib.rs
crates/beagle-events/: Cargo.toml
crates/beagle-events/examples/: simple_pubsub.rs
crates/beagle-events/src/: client.rs  error.rs  events.rs  lib.rs  metrics.rs  publisher.rs  resilience.rs  subscriber.rs
crates/beagle-events/tests/: integration_tests.rs
crates/beagle-exocortex/: Cargo.toml
crates/beagle-exocortex/src/: agents.rs  brain.rs  config.rs  context.rs  error.rs  identity.rs  lib.rs  memory.rs  orchestrator.rs  workflow.rs
crates/beagle-experiments/: Cargo.toml
crates/beagle-experiments/src/: analysis.rs  exp001.rs  lib.rs
crates/beagle-experiments/tests/: exp001_e2e.rs  integration_test.rs
crates/beagle-feedback/: Cargo.toml  README.md
crates/beagle-feedback/src/: lib.rs
crates/beagle-fractal/: Cargo.toml
crates/beagle-fractal/examples/: demo.rs  fractal_replication.rs
crates/beagle-fractal/src/: entropy_lattice.rs  fractal_node.rs  holographic_storage.rs  lib.rs  self_replication.rs
crates/beagle-fractal/tests/: integration_tests.rs
crates/beagle-grok-api/: Cargo.toml  README.md  USAGE.md
crates/beagle-grok-api/examples/: demo.rs  test_both_models.rs
crates/beagle-grok-api/src/: lib.rs
crates/beagle-grok-full/: Cargo.toml  README.md
crates/beagle-grok-full/examples/: basic.rs
crates/beagle-grok-full/src/: lib.rs
crates/beagle-grpc/: Cargo.toml  build.rs
crates/beagle-grpc/benches/: grpc_benchmarks.rs
crates/beagle-grpc/examples/: server.rs
crates/beagle-grpc/src/: agent.rs  error.rs  lib.rs  memory.rs  model.rs
crates/beagle-health/: Cargo.toml
crates/beagle-health/src/: lib.rs
crates/beagle-hermes/: .env.example  Cargo.toml  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  PENDING_TASKS.md  README.md  README_SETUP.md  docker-compose.neo4j.yml  docker-compose.observability.yml
crates/beagle-hermes/docker/: .dockerignore  Dockerfile  README.md  TEST_RESULTS.md  docker-compose.prod.yml  docker-entrypoint.sh  test-build.sh
crates/beagle-hermes/observability/: README.md  (+1 more)
crates/beagle-hrv-adaptive/: Cargo.toml
crates/beagle-hyperbolic/: Cargo.toml
(+996 files in other folders)
