[package]
name = "beagle-checkpoint"
version = "0.1.0"
edition = "2021"
description = "LangGraph-inspired checkpointing and state persistence for BEAGLE pipelines"
license = "MIT"
authors = ["BEAGLE Team"]
keywords = ["checkpoint", "persistence", "state", "pipeline", "langgraph"]
categories = ["asynchronous", "data-structures"]

[features]
default = ["memory"]
memory = []
postgres = ["dep:sqlx"]
redis = ["dep:redis"]
encrypted = ["dep:chacha20poly1305"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["sync", "time"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing
tracing = "0.1"

# Optional: PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"], optional = true }

# Optional: Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

# Optional: Encryption
chacha20poly1305 = { version = "0.10", optional = true }

# Hashing for checksums
blake3 = "1.5"

[dev-dependencies]
tokio = { version = "1.40", features = ["full", "test-util"] }
tempfile = "3.10"
