[package]
name = "beagle-config"
version = "0.1.0"
edition = "2021"
description = "BEAGLE centralized configuration and path management"
license = "MIT"

[dependencies]
anyhow = "1.0"
dirs = "5.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"

