[package]
name = "beagle-consciousness"
version = "0.1.0"
edition = "2021"
description = "Consciousness Mirror – Espelho autorreflexivo para emergência fenomenológica no BEAGLE SINGULARITY"
license = "MIT"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Crates internos
beagle-metacog = { path = "../beagle-metacog" }
beagle-llm = { path = "../beagle-llm" }

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
