[package]
name = "beagle-core"
version = "0.1.0"
edition = "2021"
description = "BEAGLE core traits and context for dependency injection"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
beagle-config = { path = "../beagle-config" }
beagle-grok-api = { path = "../beagle-grok-api" }
beagle-llm = { path = "../beagle-llm" }
reqwest = { workspace = true }
tracing = { workspace = true }
neo4rs = { version = "0.7", optional = true }
tokio = { workspace = true, features = ["sync", "net"] }
axum = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bin]]
name = "beagle-core"
path = "src/bin/main.rs"

[[bin]]
name = "api-server"
path = "src/bin/api_server.rs"

[features]
default = []
neo4j = ["neo4rs"]
memory = ["beagle-memory", "beagle-hypergraph"]
darwin = ["beagle-darwin"]
hermes = ["beagle-hermes"]
observer = ["beagle-observer"]

[dependencies.beagle-memory]
path = "../beagle-memory"
optional = true

[dependencies.beagle-hypergraph]
path = "../beagle-hypergraph"
optional = true

[dependencies.beagle-darwin]
path = "../beagle-darwin"
optional = true

[dependencies.beagle-hermes]
path = "../beagle-hermes"
optional = true

[dependencies.beagle-observer]
path = "../beagle-observer"
optional = true

