[package]
name = "beagle-cosmo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
beagle-llm = { path = "../beagle-llm" }
beagle-quantum = { path = "../beagle-quantum" }
beagle-grok-api = { path = "../beagle-grok-api" }
beagle-smart-router = { path = "../beagle-smart-router" }

[[example]]
name = "demo"
path = "examples/demo.rs"

[features]
default = []
grok = []

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
