[package]
name = "beagle-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "beagle_db"
path = "src/lib.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

