[package]
name = "beagle-eternity"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
sysinfo = "0.31"
anyhow = "1.0"
beagle-fractal = { path = "../beagle-fractal" }
beagle-quantum = { path = "../beagle-quantum" }

[[example]]
name = "eternity"
path = "examples/eternity.rs"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
