[package]
name = "beagle-experiments"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Infraestrutura para experimentos científicos do BEAGLE (A/B, MAD vs ensemble, HRV-blind vs HRV-aware)"

[[bin]]
name = "tag_experiment_run"
path = "src/bin/tag_experiment_run.rs"

[[bin]]
name = "run_experiment_triad_vs_single"
path = "src/bin/run_experiment_triad_vs_single.rs"

[[bin]]
name = "run_experiment_hrv_aware_vs_blind"
path = "src/bin/run_experiment_hrv_aware_vs_blind.rs"

[[bin]]
name = "run_experiment_serendipity"
path = "src/bin/run_experiment_serendipity.rs"

[[bin]]
name = "analyze_experiments"
path = "src/bin/analyze_experiments.rs"

[[bin]]
name = "run_beagle_expedition_001"
path = "src/bin/run_beagle_expedition_001.rs"

[[bin]]
name = "exp001-tag"
path = "src/bin/exp001-tag.rs"

[[bin]]
name = "exp001-analyze"
path = "src/bin/exp001-analyze.rs"

[dependencies]
# Workspace
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
clap = { version = "4.0", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Internal crates
beagle-config = { path = "../beagle-config" }
beagle-feedback = { path = "../beagle-feedback" }

# HTTP client for pipeline automation
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# For glob pattern matching
glob = "0.3"

# For CSV export
csv = "1.3"

# For tests
[dev-dependencies]
tempfile = "3.10"
beagle-feedback = { path = "../beagle-feedback" }
beagle-config = { path = "../beagle-config" }


