[package]
name = "beagle-feedback"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dirs = "5.0"
beagle-config = { path = "../beagle-config" }

[[bin]]
name = "tag-run"
path = "src/bin/tag_run.rs"

[[bin]]
name = "tag-experiment"
path = "src/bin/tag_experiment.rs"

[[bin]]
name = "analyze-feedback"
path = "src/bin/analyze_feedback.rs"

[[bin]]
name = "analyze-llm-usage"
path = "src/bin/analyze_llm_usage.rs"

[[bin]]
name = "analyze-hrv-effects"
path = "src/bin/analyze_hrv_effects.rs"

[[bin]]
name = "export-lora-dataset"
path = "src/bin/export_lora_dataset.rs"

