[package]
name = "beagle-fractal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
blake3 = "1.5"
dashmap = "6.1"
once_cell = "1.19"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
petgraph = "0.6"
chrono = { version = "0.4", features = ["serde"] }
beagle-quantum = { path = "../beagle-quantum" }
beagle-consciousness = { path = "../beagle-consciousness" }
beagle-llm = { path = "../beagle-llm" }

[features]
default = []

[[example]]
name = "demo"
path = "examples/demo.rs"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
