[package]
name = "beagle-grok-full"
version = "0.1.0"
edition = "2021"
authors = ["Dr. Demetrios Agourakis <contact@darwin-cluster.ai>"]
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1.40", features = ["full"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }



