[package]
name = "beagle-hermes"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
chrono = "0.4"
rand = "0.8"

# NLP & Text Processing
unicode-segmentation = "1.10"
regex = "1.10"
rayon = "1.8"  # Parallel processing

# ML & Fine-tuning (commented out until needed - version conflicts)
# candle-core = "0.9"  # Hugging Face Candle (Rust ML)
# candle-transformers = "0.9"
# safetensors = "0.6"

# Citation Management
scraper = "0.18"  # HTML parsing for Semantic Scholar
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Internal (stub for now - will create later)
# beagle-llm = { path = "../beagle-llm" }
# beagle-memory = { path = "../beagle-memory" }
# beagle-db = { path = "../beagle-db" }

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

