[package]
name = "beagle-hermes"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true
tokio-cron-scheduler = "0.10"
async-trait.workspace = true
futures.workspace = true

# Web framework (for API integration)
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

# Database (optional via features)
sqlx = { workspace = true, optional = true }
neo4rs = { version = "0.7", optional = true }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }

# Performance
deadpool = "0.10"
tonic = "0.11"

# Security
jsonwebtoken = "9.3"

# Observability
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
lazy_static = "1.4"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# ML integration (Python bridge)
pyo3 = { version = "0.20", features = ["auto-initialize"] }

# LoRA Training (commented out due to version conflicts - use Python bridge instead)
# candle-core = "0.4"
# candle-transformers = "0.4"
# safetensors = "0.4"

# NLP & Text Processing
unicode-segmentation = "1.10"
regex = "1.10"
rayon = "1.8"
rand = "0.8"

# Citation Management
scraper = "0.18"
reqwest.workspace = true
urlencoding = "2.1"

# Internal crates
beagle-llm = { path = "../beagle-llm" }
beagle-memory.workspace = true
beagle-hypergraph = { path = "../beagle-hypergraph", default-features = false }
beagle-db = { path = "../beagle-db", optional = true }
beagle-core = { path = "../beagle-core" }
beagle-config = { path = "../beagle-config" }
beagle-quantum = { path = "../beagle-quantum" }
beagle-metacog = { path = "../beagle-metacog" }
beagle-serendipity = { path = "../beagle-serendipity" }
beagle-worldmodel = { path = "../beagle-worldmodel" }
beagle-consciousness = { path = "../beagle-consciousness" }
beagle-fractal = { path = "../beagle-fractal" }
beagle-abyss = { path = "../beagle-abyss" }
beagle-lora-auto = { path = "../beagle-lora-auto" }

[features]
default = ["database"]
database = ["sqlx", "redis", "neo4rs", "beagle-hypergraph/database", "beagle-db"]
offline = [] # Disable database dependencies for offline compilation

[dev-dependencies]
tokio-test.workspace = true
criterion.workspace = true
mockall = "0.12"
proptest.workspace = true
